docs: optimize CLAUDE.md + add v1.0.0 architecture sections
CLAUDE.md:
- Condensed from 55 to 30 lines
- Quick reference section at top
- Detailed code patterns moved to docs/architecture.md reference
- Key architecture decisions summary

docs/architecture.md:
- Added DiagnosticCommand SPI structure
- Added Doctor Engine + 8 rules layout
- Added GC Log Analyzer structure
- Added TUI 3-phase flow description
- Added RouteTable pattern

Signed-off-by: rlaope <piyrw9754@gmail.com>